<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_above="@+id/linearLayout"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D8DDE1"
        android:layout_below="@+id/txt_about_center"
        tools:ignore="UnknownId"></View>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/index_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/index_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/shouye1" />
            <TextView
                android:id="@+id/index_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/index_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/shouye"
                android:textColor="@color/systemColor"
                android:textSize="16sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/message_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/message_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/xiaoxi"/>

            <TextView
                android:id="@+id/message_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/message_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/xiaoxi"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/dynamic_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/dynamic_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/dongtai" />
            <TextView
                android:id="@+id/dynamic_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/dynamic_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/guangchang"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/sign_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/sign_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/dingdan"/>
            <TextView
                android:id="@+id/sign_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sign_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/dingdan"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/my_layout_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/my_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/wo" />
            <TextView
                android:id="@+id/my_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/my_image_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/wode"
                android:textColor="@color/black"
                android:textSize="16sp"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>